--- a/app/_css/character.css
+++ b/app/_css/character.css
@@ -14,9 +14,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 48px;
     margin: 8px;
-    padding: 0 16px;
+    padding: 4px 16px;
+    font-size: 1.75rem;
     text-align: center;
     text-wrap: wrap;
 }
@@ -32,11 +32,28 @@
 
     #characterbios a {
         width: 256px;
+        height: 96px;
     }
 }
 
-@media only screen and (max-width: 1279px) {
+@media only screen and not (max-width: 575px) {
+    .charactercolumn-lhs {
+        padding-right: 8px;
+    }
+
+    .charactercolumn-rhs {
+        padding-left: 8px;
+    }
+
+    #characterbios a {
+        width: 256px;
+        height: 96px;
+    }
+}
+
+@media only screen and (max-width: 575px) {
     #characterbios a {
         width: 512px;
+        height: 48px;
     }
 }
